# IKM-

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_signature.out  vercel.json
api/: index.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: ChatInterface.tsx  FileUploader.tsx  MessageBubble.tsx
src/app/: api.py  main.py  models.py
src/app/core/: config.py
src/app/core/agents/: agents.py  graph.py  prompts.py  state.py  tools.py
src/app/core/llm/: factory.py
src/app/core/retrieval/: __init__.py  vector_store.py
src/app/services/: indexing_service.py  qa_service.py
src/app/static/: index.html  script.js  style.css
tests/: test_agents.py  test_main.py  test_models.py  test_serialization.py
